example7/iec61131ST.output
Terminals unused in grammar

   '-'
   '+'
   '*'
   '/'


Grammar

    0 $accept: program_declaration $end

    1 program_type_name: tokID

    2 variable_name: tokID

    3 program_declaration: tokPROGRAM program_type_name assignment_statement tokEND_PROGRAM

    4 assignment_statement: variable_name tokASSGNOP tokInteger ';'


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
';' (59) 4
error (256)
tokID (258) 1 2
tokPROGRAM (259) 3
tokEND_PROGRAM (260) 3
tokInteger (261) 4
tokASSGNOP (262) 4


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program_type_name (14)
    on left: 1, on right: 3
variable_name (15)
    on left: 2, on right: 4
program_declaration (16)
    on left: 3, on right: 0
assignment_statement (17)
    on left: 4, on right: 3


State 0

    0 $accept: . program_declaration $end

    tokPROGRAM  shift, and go to state 1

    program_declaration  go to state 2


State 1

    3 program_declaration: tokPROGRAM . program_type_name assignment_statement tokEND_PROGRAM

    tokID  shift, and go to state 3

    program_type_name  go to state 4


State 2

    0 $accept: program_declaration . $end

    $end  shift, and go to state 5


State 3

    1 program_type_name: tokID .

    $default  reduce using rule 1 (program_type_name)


State 4

    3 program_declaration: tokPROGRAM program_type_name . assignment_statement tokEND_PROGRAM

    tokID  shift, and go to state 6

    variable_name         go to state 7
    assignment_statement  go to state 8


State 5

    0 $accept: program_declaration $end .

    $default  accept


State 6

    2 variable_name: tokID .

    $default  reduce using rule 2 (variable_name)


State 7

    4 assignment_statement: variable_name . tokASSGNOP tokInteger ';'

    tokASSGNOP  shift, and go to state 9


State 8

    3 program_declaration: tokPROGRAM program_type_name assignment_statement . tokEND_PROGRAM

    tokEND_PROGRAM  shift, and go to state 10


State 9

    4 assignment_statement: variable_name tokASSGNOP . tokInteger ';'

    tokInteger  shift, and go to state 11


State 10

    3 program_declaration: tokPROGRAM program_type_name assignment_statement tokEND_PROGRAM .

    $default  reduce using rule 3 (program_declaration)


State 11

    4 assignment_statement: variable_name tokASSGNOP tokInteger . ';'

    ';'  shift, and go to state 12


State 12

    4 assignment_statement: variable_name tokASSGNOP tokInteger ';' .

    $default  reduce using rule 4 (assignment_statement)
